--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <link rel="stylesheet" type="text/css" href="css/css-1.css">
   <title>Ojohub | The Next Leveled Marketplace </title>
   <style>
     progress {
